# open-model-viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
includes/glad/: glad.h
includes/stb_image/: stb_image_write.h
src/: Main.cpp  camera.cpp  camera.h  fragmentshader.fs  glad.c  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  vertexshader.vs
